last modify before final project
commit 538f9bcb9a0b8408238dc80b729be60933286deb
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Mon Feb 15 21:28:30 2021 -0800

    add dots on owl carousel

commit 54f3625ca58d031933bdfd1e37d4c16f50931a80
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Mon Feb 15 20:54:18 2021 -0800

    remove unnecessary files

commit 0c0e2b12f9d692ad9cea836d9f1fe2fac94d824a
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Mon Feb 15 20:52:22 2021 -0800

    change pictures for background

commit 570fa25d536b14f534393c494ec87bb584f48347
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Mon Feb 15 20:21:12 2021 -0800

    updating cake images

commit 770f66a0803092016627d42b1a9f7ffc0e4ad009
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Mon Feb 15 19:36:40 2021 -0800

    add owl carousel into project

commit b86f06f1eb6edccf65e76dea3cbdc6a0afe573ca
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Sun Feb 14 20:54:15 2021 -0800

    convert nav list into js to create the menu

commit 2fe8ae3647f82e457a8fffe9a55b20ee4b917e3c
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Sun Feb 14 20:23:11 2021 -0800

    convert contact form and created by js

commit cf644d333e100457acc92c26cadf852c5ac0d9ab
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Sun Feb 14 20:16:06 2021 -0800

    fix line layout

--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,7 @@ header .navigation li {
 
 header .navigation li a {
   text-decoration: none;
+  text-transform: capitalize;
   font-weight: 300;
   color: #ffffff;
 }
@@ -256,6 +257,9 @@ header.sticky .navigation li a:hover {
   }
   .row .col50 {
     width: 100%;
+  }
+  .row .col50 h2 {
+    text-align: center;
   }
   .row .col50 .imgBox {
     height: 30vh;
@@ -474,7 +478,6 @@ header.sticky .navigation li a:hover {
 }
 
 .reviews-content .box {
-  width: 340px;
   margin: 20px;
   padding: 40px;
   background: #ffffff;
@@ -532,6 +535,28 @@ header.sticky .navigation li a:hover {
   color: #777777;
   font-weight: 300;
   content: "\2014 \2009";
+}
+
+.owl-dots {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.owl-dot {
+  height: 10px;
+  width: 35px;
+  border-radius: 25px;
+  border: 2px solid #fff5ee !important;
+  cursor: pointer;
+  margin: 0 3px;
+  outline: none;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+}
+
+.owl-dot:hover,
+.owl-dot.active {
+  background: #fff5ee !important;
 }
 
 @media (max-width: 991px) {
@@ -628,6 +653,7 @@ header.sticky .navigation li a:hover {
   font-size: 15px;
   -webkit-transition: 500ms;
   transition: 500ms;
+  text-transform: capitalize;
 }
 
 .contact-form .submit-button input[type="submit"] {
@@ -641,6 +667,9 @@ header.sticky .navigation li a:hover {
     padding: 35px 40px;
     margin-top: 20px;
     margin-bottom: 30px;
+  }
+  .contact-form .lines {
+    margin-top: -35px;
   }
 }
 
