--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -34,6 +34,10 @@
         .col50 {
             width: 100%;
 
+            h2 {
+                text-align: center;
+            }
+
             .imgBox {
                 height: 30vh;
                 margin-top: 20px;
