--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -30,6 +30,7 @@ header {
 
             a {
                 text-decoration: none;
+                text-transform: capitalize;
                 font-weight: 300;
                 @include navigationEffect(getColor(primaryLightColor));
             }
