--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,10 @@
   margin-top: 20px;
 }
 
-.chefs-bg .border-top, .chefs-bg .border-bottom {
+.chefs-bg .border-top, .chefs-bg .border-bottom, .chefs-bg .border-right, .chefs-bg .border-left {
   -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2/4;
+  -ms-grid-column-span: 3;
+  grid-column: 2/5;
   background: #ff0157;
 }
 
@@ -363,8 +363,8 @@ header.sticky .navigation li a:hover {
   margin: 5vh 0;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 5vw clamp(3vw, 3.5vw, 4vw) clamp(150px, 30vw, 400px) auto;
-      grid-template-columns: 5vw clamp(3vw, 3.5vw, 4vw) clamp(150px, 30vw, 400px) auto;
+  -ms-grid-columns: 5vw clamp(3vw, 3.5vw, 4vw) clamp(150px, 30vw, 350px) clamp(3vw, 3.5vw, 4vw) auto;
+      grid-template-columns: 5vw clamp(3vw, 3.5vw, 4vw) clamp(150px, 30vw, 350px) clamp(3vw, 3.5vw, 4vw) auto;
   -ms-grid-rows: 6vw auto 6vw;
       grid-template-rows: 6vw auto 6vw;
 }
@@ -374,8 +374,8 @@ header.sticky .navigation li a:hover {
   grid-column: 1/-1;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 5vw clamp(3vw, 3.5vw, 4vw) clamp(150px, 30vw, 400px) auto 5vw;
-      grid-template-columns: 5vw clamp(3vw, 3.5vw, 4vw) clamp(150px, 30vw, 400px) auto 5vw;
+  -ms-grid-columns: 5vw clamp(3vw, 3.5vw, 4vw) clamp(150px, 30vw, 350px) clamp(3vw, 3.5vw, 4vw) auto 5vw;
+      grid-template-columns: 5vw clamp(3vw, 3.5vw, 4vw) clamp(150px, 30vw, 350px) clamp(3vw, 3.5vw, 4vw) auto 5vw;
   -ms-grid-rows: 6vw auto 6vw;
       grid-template-rows: 6vw auto 6vw;
 }
@@ -384,14 +384,20 @@ header.sticky .navigation li a:hover {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
-  -webkit-clip-path: polygon(100% 100%, 100% 0%, 0% 0%, 0 50%, 90% 50%, 90% 100%);
-          clip-path: polygon(100% 100%, 100% 0%, 0% 0%, 0 50%, 90% 50%, 90% 100%);
+  -webkit-clip-path: polygon(100% 50%, 100% 0%, 0% 0%, 0 50%);
+          clip-path: polygon(100% 50%, 100% 0%, 0% 0%, 0 50%);
 }
 
 .chefs-bg .border-bottom {
-  grid-row: 3/-2;
-  -webkit-clip-path: polygon(90% 0, 100% 0, 100% 100%, 0 100%, 0 50%, 90% 50%);
-          clip-path: polygon(90% 0, 100% 0, 100% 100%, 0 100%, 0 50%, 90% 50%);
+  grid-row: 3/-1;
+  -webkit-clip-path: polygon(100% 100%, 0 100%, 0 50%, 100% 50%);
+          clip-path: polygon(100% 100%, 0 100%, 0 50%, 100% 50%);
+}
+
+.chefs-bg .border-right {
+  grid-row: 1/-1;
+  -ms-grid-column: 4;
+  grid-column: 4;
 }
 
 .chefs-bg .chef-bg {
@@ -404,8 +410,8 @@ header.sticky .navigation li a:hover {
           box-shadow: 4px 0 10px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 5vw clamp(3vw, 3.5vw, 4vw) clamp(150px, 30vw, 400px) auto;
-      grid-template-columns: 5vw clamp(3vw, 3.5vw, 4vw) clamp(150px, 30vw, 400px) auto;
+  -ms-grid-columns: 5vw clamp(3vw, 3.5vw, 45px) clamp(150px, 30vw, 400px) auto;
+      grid-template-columns: 5vw clamp(3vw, 3.5vw, 45px) clamp(150px, 30vw, 400px) auto;
   z-index: 2;
   place-items: center;
 }
@@ -433,22 +439,24 @@ header.sticky .navigation li a:hover {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  width: 100%;
 }
 
 .chefs-bg .chef-bg .portfiles .box {
   grid-column: 4/-1;
   background: white;
   padding: 20px;
-  width: 250px;
   margin: 15px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 250px;
+          flex: 0 1 250px;
 }
 
-.chefs-bg .red-border {
+.chefs-bg .border-left {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2/3;
   grid-row: 1/-1;
-  background-color: #ff0157;
   z-index: 3;
 }
 
